Entrega2-AnalisadorSintatico/SintaticoArquivos/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On FUNCTION shift to state 1
-- On prog shift to state 217
-- On list(funcao) shift to state 218
-- On funcao shift to state 222
-- On WHILE reduce production list(funcao) -> 
-- On VAR reduce production list(funcao) -> 
-- On SWITCH reduce production list(funcao) -> 
-- On RETURN reduce production list(funcao) -> 
-- On LITSTRING reduce production list(funcao) -> 
-- On LITINT reduce production list(funcao) -> 
-- On LITFLOAT reduce production list(funcao) -> 
-- On LITCHAR reduce production list(funcao) -> 
-- On LITBOOL reduce production list(funcao) -> 
-- On LET reduce production list(funcao) -> 
-- On INCR reduce production list(funcao) -> 
-- On IF reduce production list(funcao) -> 
-- On ID reduce production list(funcao) -> 
-- On FUNCTION reduce production list(funcao) -> 
-- On FOR reduce production list(funcao) -> 
-- On EOF reduce production list(funcao) -> 
-- On DO reduce production list(funcao) -> 
-- On DECR reduce production list(funcao) -> 
-- On CONST reduce production list(funcao) -> 
-- On CONSOLELOG reduce production list(funcao) -> 
** Conflict on FUNCTION

State 1:
funcao -> FUNCTION . ID APAR parametros FPAR ACHAVE list(statement) FCHAVE [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR EOF DO DECR CONST CONSOLELOG ]
-- On ID shift to state 2

State 2:
funcao -> FUNCTION ID . APAR parametros FPAR ACHAVE list(statement) FCHAVE [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR EOF DO DECR CONST CONSOLELOG ]
-- On APAR shift to state 3

State 3:
funcao -> FUNCTION ID APAR . parametros FPAR ACHAVE list(statement) FCHAVE [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR EOF DO DECR CONST CONSOLELOG ]
-- On VAR shift to state 4
-- On separated_nonempty_list(VIRG,parametro) shift to state 6
-- On parametros shift to state 7
-- On parametro shift to state 213
-- On loption(separated_nonempty_list(VIRG,parametro)) shift to state 216
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,parametro)) -> 

State 4:
parametro -> VAR . ID [ VIRG FPAR ]
-- On ID shift to state 5

State 5:
parametro -> VAR ID . [ VIRG FPAR ]
-- On VIRG reduce production parametro -> VAR ID 
-- On FPAR reduce production parametro -> VAR ID 

State 6:
loption(separated_nonempty_list(VIRG,parametro)) -> separated_nonempty_list(VIRG,parametro) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,parametro)) -> separated_nonempty_list(VIRG,parametro) 

State 7:
funcao -> FUNCTION ID APAR parametros . FPAR ACHAVE list(statement) FCHAVE [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR EOF DO DECR CONST CONSOLELOG ]
-- On FPAR shift to state 8

State 8:
funcao -> FUNCTION ID APAR parametros FPAR . ACHAVE list(statement) FCHAVE [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR EOF DO DECR CONST CONSOLELOG ]
-- On ACHAVE shift to state 9

State 9:
funcao -> FUNCTION ID APAR parametros FPAR ACHAVE . list(statement) FCHAVE [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR EOF DO DECR CONST CONSOLELOG ]
-- On WHILE shift to state 10
-- On VAR shift to state 78
-- On SWITCH shift to state 79
-- On RETURN shift to state 88
-- On LITSTRING shift to state 13
-- On LITINT shift to state 14
-- On LITFLOAT shift to state 15
-- On LITCHAR shift to state 16
-- On LITBOOL shift to state 17
-- On LET shift to state 91
-- On INCR shift to state 92
-- On IF shift to state 95
-- On ID shift to state 18
-- On FOR shift to state 99
-- On DO shift to state 111
-- On DECR shift to state 113
-- On CONST shift to state 116
-- On CONSOLELOG shift to state 117
-- On variavel shift to state 122
-- On tipo shift to state 136
-- On termo shift to state 145
-- On stm_while shift to state 150
-- On stm_switch shift to state 151
-- On stm_return shift to state 152
-- On stm_read shift to state 153
-- On stm_print shift to state 154
-- On stm_incr_decr shift to state 155
-- On stm_if shift to state 156
-- On stm_for shift to state 157
-- On stm_dowhile shift to state 158
-- On stm_declara_var_inicializa shift to state 159
-- On stm_declara_var shift to state 160
-- On stm_attr shift to state 161
-- On statement shift to state 162
-- On literal shift to state 27
-- On list(statement) shift to state 211
-- On chamada_funcao shift to state 164
-- On FCHAVE reduce production list(statement) -> 

State 10:
stm_while -> WHILE . APAR expressao FPAR ACHAVE list(statement) FCHAVE [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR FCHAVE EOF ELSE DO DECR CONST CONSOLELOG BREAK ]
stm_while -> WHILE . APAR expressao FPAR statement [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR FCHAVE EOF ELSE DO DECR CONST CONSOLELOG BREAK ]
-- On APAR shift to state 11

State 11:
stm_while -> WHILE APAR . expressao FPAR ACHAVE list(statement) FCHAVE [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR FCHAVE EOF ELSE DO DECR CONST CONSOLELOG BREAK ]
stm_while -> WHILE APAR . expressao FPAR statement [ WHILE VAR SWITCH RETURN LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IF ID FUNCTION FOR FCHAVE EOF ELSE DO DECR CONST CONSOLELOG BREAK ]
-- On NOT shift to state 12
-- On MENOS shift to state 20
-- On MAIS shift to state 25
-- On LITSTRING shift to state 13
-- On LITINT shift to state 14
-- On LITFLOAT shift to state 15
-- On LITCHAR shift to state 16
-- On LITBOOL shift to state 17
-- On INCR shift to state 29
-- On ID shift to state 18
-- On DECR shift to state 31
-- On APAR shift to state 33
-- On variavel shift to state 21
-- On termo shift to state 34
-- On literal shift to state 27
-- On expressao shift to state 76
-- On chamada_funcao shift to state 28

State 12:
expressao -> NOT . termo [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK AND ]
-- On LITSTRING shift to state 13
-- On LITINT shift to state 14
-- On LITFLOAT shift to state 15
-- On LITCHAR shift to state 16
-- On LITBOOL shift to state 17
-- On ID shift to state 18
-- On variavel shift to state 21
-- On termo shift to state 75
-- On literal shift to state 27
-- On chamada_funcao shift to state 28

State 13:
literal -> LITSTRING . [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK AND ]
-- On WHILE reduce production literal -> LITSTRING 
-- On VIRG reduce production literal -> LITSTRING 
-- On VAR reduce production literal -> LITSTRING 
-- On SWITCH reduce production literal -> LITSTRING 
-- On RETURN reduce production literal -> LITSTRING 
-- On POT reduce production literal -> LITSTRING 
-- On PONTOVIRG reduce production literal -> LITSTRING 
-- On OR reduce production literal -> LITSTRING 
-- On MULTATRIB reduce production literal -> LITSTRING 
-- On MULT reduce production literal -> LITSTRING 
-- On MOD reduce production literal -> LITSTRING 
-- On MENOSATRIB reduce production literal -> LITSTRING 
-- On MENOS reduce production literal -> LITSTRING 
-- On MENORIGUAL reduce production literal -> LITSTRING 
-- On MENOR reduce production literal -> LITSTRING 
-- On MAISATRIB reduce production literal -> LITSTRING 
-- On MAIS reduce production literal -> LITSTRING 
-- On MAIORIGUAL reduce production literal -> LITSTRING 
-- On MAIOR reduce production literal -> LITSTRING 
-- On LITSTRING reduce production literal -> LITSTRING 
-- On LITINT reduce production literal -> LITSTRING 
-- On LITFLOAT reduce production literal -> LITSTRING 
-- On LITCHAR reduce production literal -> LITSTRING 
-- On LITBOOL reduce production literal -> LITSTRING 
-- On LET reduce production literal -> LITSTRING 
-- On INCR reduce production literal -> LITSTRING 
-- On IGUAL reduce production literal -> LITSTRING 
-- On IF reduce production literal -> LITSTRING 
-- On ID reduce production literal -> LITSTRING 
-- On FUNCTION reduce production literal -> LITSTRING 
-- On FPAR reduce production literal -> LITSTRING 
-- On FOR reduce production literal -> LITSTRING 
-- On FCOLCH reduce production literal -> LITSTRING 
-- On FCHAVE reduce production literal -> LITSTRING 
-- On EOF reduce production literal -> LITSTRING 
-- On ELSE reduce production literal -> LITSTRING 
-- On DO reduce production literal -> LITSTRING 
-- On DIV reduce production literal -> LITSTRING 
-- On DIF reduce production literal -> LITSTRING 
-- On DECR reduce production literal -> LITSTRING 
-- On CONST reduce production literal -> LITSTRING 
-- On CONSOLELOG reduce production literal -> LITSTRING 
-- On BREAK reduce production literal -> LITSTRING 
-- On AND reduce production literal -> LITSTRING 

State 14:
literal -> LITINT . [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK AND ]
-- On WHILE reduce production literal -> LITINT 
-- On VIRG reduce production literal -> LITINT 
-- On VAR reduce production literal -> LITINT 
-- On SWITCH reduce production literal -> LITINT 
-- On RETURN reduce production literal -> LITINT 
-- On POT reduce production literal -> LITINT 
-- On PONTOVIRG reduce production literal -> LITINT 
-- On OR reduce production literal -> LITINT 
-- On MULTATRIB reduce production literal -> LITINT 
-- On MULT reduce production literal -> LITINT 
-- On MOD reduce production literal -> LITINT 
-- On MENOSATRIB reduce production literal -> LITINT 
-- On MENOS reduce production literal -> LITINT 
-- On MENORIGUAL reduce production literal -> LITINT 
-- On MENOR reduce production literal -> LITINT 
-- On MAISATRIB reduce production literal -> LITINT 
-- On MAIS reduce production literal -> LITINT 
-- On MAIORIGUAL reduce production literal -> LITINT 
-- On MAIOR reduce production literal -> LITINT 
-- On LITSTRING reduce production literal -> LITINT 
-- On LITINT reduce production literal -> LITINT 
-- On LITFLOAT reduce production literal -> LITINT 
-- On LITCHAR reduce production literal -> LITINT 
-- On LITBOOL reduce production literal -> LITINT 
-- On LET reduce production literal -> LITINT 
-- On INCR reduce production literal -> LITINT 
-- On IGUAL reduce production literal -> LITINT 
-- On IF reduce production literal -> LITINT 
-- On ID reduce production literal -> LITINT 
-- On FUNCTION reduce production literal -> LITINT 
-- On FPAR reduce production literal -> LITINT 
-- On FOR reduce production literal -> LITINT 
-- On FCOLCH reduce production literal -> LITINT 
-- On FCHAVE reduce production literal -> LITINT 
-- On EOF reduce production literal -> LITINT 
-- On ELSE reduce production literal -> LITINT 
-- On DO reduce production literal -> LITINT 
-- On DIV reduce production literal -> LITINT 
-- On DIF reduce production literal -> LITINT 
-- On DECR reduce production literal -> LITINT 
-- On CONST reduce production literal -> LITINT 
-- On CONSOLELOG reduce production literal -> LITINT 
-- On BREAK reduce production literal -> LITINT 
-- On AND reduce production literal -> LITINT 

State 15:
literal -> LITFLOAT . [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK AND ]
-- On WHILE reduce production literal -> LITFLOAT 
-- On VIRG reduce production literal -> LITFLOAT 
-- On VAR reduce production literal -> LITFLOAT 
-- On SWITCH reduce production literal -> LITFLOAT 
-- On RETURN reduce production literal -> LITFLOAT 
-- On POT reduce production literal -> LITFLOAT 
-- On PONTOVIRG reduce production literal -> LITFLOAT 
-- On OR reduce production literal -> LITFLOAT 
-- On MULTATRIB reduce production literal -> LITFLOAT 
-- On MULT reduce production literal -> LITFLOAT 
-- On MOD reduce production literal -> LITFLOAT 
-- On MENOSATRIB reduce production literal -> LITFLOAT 
-- On MENOS reduce production literal -> LITFLOAT 
-- On MENORIGUAL reduce production literal -> LITFLOAT 
-- On MENOR reduce production literal -> LITFLOAT 
-- On MAISATRIB reduce production literal -> LITFLOAT 
-- On MAIS reduce production literal -> LITFLOAT 
-- On MAIORIGUAL reduce production literal -> LITFLOAT 
-- On MAIOR reduce production literal -> LITFLOAT 
-- On LITSTRING reduce production literal -> LITFLOAT 
-- On LITINT reduce production literal -> LITFLOAT 
-- On LITFLOAT reduce production literal -> LITFLOAT 
-- On LITCHAR reduce production literal -> LITFLOAT 
-- On LITBOOL reduce production literal -> LITFLOAT 
-- On LET reduce production literal -> LITFLOAT 
-- On INCR reduce production literal -> LITFLOAT 
-- On IGUAL reduce production literal -> LITFLOAT 
-- On IF reduce production literal -> LITFLOAT 
-- On ID reduce production literal -> LITFLOAT 
-- On FUNCTION reduce production literal -> LITFLOAT 
-- On FPAR reduce production literal -> LITFLOAT 
-- On FOR reduce production literal -> LITFLOAT 
-- On FCOLCH reduce production literal -> LITFLOAT 
-- On FCHAVE reduce production literal -> LITFLOAT 
-- On EOF reduce production literal -> LITFLOAT 
-- On ELSE reduce production literal -> LITFLOAT 
-- On DO reduce production literal -> LITFLOAT 
-- On DIV reduce production literal -> LITFLOAT 
-- On DIF reduce production literal -> LITFLOAT 
-- On DECR reduce production literal -> LITFLOAT 
-- On CONST reduce production literal -> LITFLOAT 
-- On CONSOLELOG reduce production literal -> LITFLOAT 
-- On BREAK reduce production literal -> LITFLOAT 
-- On AND reduce production literal -> LITFLOAT 

State 16:
literal -> LITCHAR . [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK AND ]
-- On WHILE reduce production literal -> LITCHAR 
-- On VIRG reduce production literal -> LITCHAR 
-- On VAR reduce production literal -> LITCHAR 
-- On SWITCH reduce production literal -> LITCHAR 
-- On RETURN reduce production literal -> LITCHAR 
-- On POT reduce production literal -> LITCHAR 
-- On PONTOVIRG reduce production literal -> LITCHAR 
-- On OR reduce production literal -> LITCHAR 
-- On MULTATRIB reduce production literal -> LITCHAR 
-- On MULT reduce production literal -> LITCHAR 
-- On MOD reduce production literal -> LITCHAR 
-- On MENOSATRIB reduce production literal -> LITCHAR 
-- On MENOS reduce production literal -> LITCHAR 
-- On MENORIGUAL reduce production literal -> LITCHAR 
-- On MENOR reduce production literal -> LITCHAR 
-- On MAISATRIB reduce production literal -> LITCHAR 
-- On MAIS reduce production literal -> LITCHAR 
-- On MAIORIGUAL reduce production literal -> LITCHAR 
-- On MAIOR reduce production literal -> LITCHAR 
-- On LITSTRING reduce production literal -> LITCHAR 
-- On LITINT reduce production literal -> LITCHAR 
-- On LITFLOAT reduce production literal -> LITCHAR 
-- On LITCHAR reduce production literal -> LITCHAR 
-- On LITBOOL reduce production literal -> LITCHAR 
-- On LET reduce production literal -> LITCHAR 
-- On INCR reduce production literal -> LITCHAR 
-- On IGUAL reduce production literal -> LITCHAR 
-- On IF reduce production literal -> LITCHAR 
-- On ID reduce production literal -> LITCHAR 
-- On FUNCTION reduce production literal -> LITCHAR 
-- On FPAR reduce production literal -> LITCHAR 
-- On FOR reduce production literal -> LITCHAR 
-- On FCOLCH reduce production literal -> LITCHAR 
-- On FCHAVE reduce production literal -> LITCHAR 
-- On EOF reduce production literal -> LITCHAR 
-- On ELSE reduce production literal -> LITCHAR 
-- On DO reduce production literal -> LITCHAR 
-- On DIV reduce production literal -> LITCHAR 
-- On DIF reduce production literal -> LITCHAR 
-- On DECR reduce production literal -> LITCHAR 
-- On CONST reduce production literal -> LITCHAR 
-- On CONSOLELOG reduce production literal -> LITCHAR 
-- On BREAK reduce production literal -> LITCHAR 
-- On AND reduce production literal -> LITCHAR 

State 17:
literal -> LITBOOL . [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK AND ]
-- On WHILE reduce production literal -> LITBOOL 
-- On VIRG reduce production literal -> LITBOOL 
-- On VAR reduce production literal -> LITBOOL 
-- On SWITCH reduce production literal -> LITBOOL 
-- On RETURN reduce production literal -> LITBOOL 
-- On POT reduce production literal -> LITBOOL 
-- On PONTOVIRG reduce production literal -> LITBOOL 
-- On OR reduce production literal -> LITBOOL 
-- On MULTATRIB reduce production literal -> LITBOOL 
-- On MULT reduce production literal -> LITBOOL 
-- On MOD reduce production literal -> LITBOOL 
-- On MENOSATRIB reduce production literal -> LITBOOL 
-- On MENOS reduce production literal -> LITBOOL 
-- On MENORIGUAL reduce production literal -> LITBOOL 
-- On MENOR reduce production literal -> LITBOOL 
-- On MAISATRIB reduce production literal -> LITBOOL 
-- On MAIS reduce production literal -> LITBOOL 
-- On MAIORIGUAL reduce production literal -> LITBOOL 
-- On MAIOR reduce production literal -> LITBOOL 
-- On LITSTRING reduce production literal -> LITBOOL 
-- On LITINT reduce production literal -> LITBOOL 
-- On LITFLOAT reduce production literal -> LITBOOL 
-- On LITCHAR reduce production literal -> LITBOOL 
-- On LITBOOL reduce production literal -> LITBOOL 
-- On LET reduce production literal -> LITBOOL 
-- On INCR reduce production literal -> LITBOOL 
-- On IGUAL reduce production literal -> LITBOOL 
-- On IF reduce production literal -> LITBOOL 
-- On ID reduce production literal -> LITBOOL 
-- On FUNCTION reduce production literal -> LITBOOL 
-- On FPAR reduce production literal -> LITBOOL 
-- On FOR reduce production literal -> LITBOOL 
-- On FCOLCH reduce production literal -> LITBOOL 
-- On FCHAVE reduce production literal -> LITBOOL 
-- On EOF reduce production literal -> LITBOOL 
-- On ELSE reduce production literal -> LITBOOL 
-- On DO reduce production literal -> LITBOOL 
-- On DIV reduce production literal -> LITBOOL 
-- On DIF reduce production literal -> LITBOOL 
-- On DECR reduce production literal -> LITBOOL 
-- On CONST reduce production literal -> LITBOOL 
-- On CONSOLELOG reduce production literal -> LITBOOL 
-- On BREAK reduce production literal -> LITBOOL 
-- On AND reduce production literal -> LITBOOL 

State 18:
chamada_funcao -> ID . APAR funcao_args FPAR option(stm_ptv) [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK AND ]
variavel -> ID . [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK ATRIB AND ]
variavel -> ID . ACOLCH expressao FCOLCH [ WHILE VIRG VAR SWITCH RETURN POT PONTOVIRG OR MULTATRIB MULT MOD MENOSATRIB MENOS MENORIGUAL MENOR MAISATRIB MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR LITBOOL LET INCR IGUAL IF ID FUNCTION FPAR FOR FCOLCH FCHAVE EOF ELSE DO DIV DIF DECR CONST CONSOLELOG BREAK ATRIB AND ]
-- On APAR shift to state 19
-- On ACOLCH shift to state 72
-- On WHILE reduce production variavel -> ID 
-- On VIRG reduce production variavel -> ID 
-- On VAR reduce production variavel -> ID 
-- On SWITCH reduce production variavel -> ID 
-- On RETURN reduce production variavel -> ID 
-- On POT reduce production variavel -> ID 
-- On PONTOVIRG reduce production variavel -> ID 
-- On OR reduce production variavel -> ID 
-- On MULTATRIB reduce production variavel -> ID 
-- On MULT reduce production variavel -> ID 
-- On MOD reduce production variavel -> ID 
-- On MENOSATRIB reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAISATRIB reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On LITSTRING reduce production variavel -> ID 
-- On LITINT reduce production variavel -> ID 
-- On LITFLOAT reduce production variavel -> ID 
-- On LITCHAR reduce production variavel -> ID 
-- On LITBOOL reduce production variavel -> ID 
-- On LET reduce production variavel -> ID 
-- On INCR reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On IF reduce production variavel -> ID 
-- On ID reduce production variavel -> ID 
-- On FUNCTION reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On FOR reduce production variavel -> ID 
-- On FCOLCH reduce production variavel -> ID 
-- On FCHAVE reduce production variavel -> ID 
-- On EOF reduce production variavel -> ID 
-- On ELSE reduce production variavel -> ID 
-- On DO reduce production variavel -> ID 
-- On DIV reduce production variavel -> ID 
-- On DIF reduce production variavel -> ID 
-- On DECR reduce production variavel -> ID 
-- On CONST reduce production variavel -> ID 
-- On CONSOLELOG reduce production variavel -> ID 
-- On BREAK reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 
-- On AND reduce production variavel -> ID 
